# Serializer

./: CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CodingStandard.md  README.md  setup.sh  vcpkg-configuration.json
example/: config.struct
include/rohit/: serializer.h  serializercreator.h  stream.h
src/: common.cpp  cppwriter.cpp  parser.cpp  serializer.cpp  serializerparser.cpp
test/: CMakeLists.txt  coreserializertest.cpp  generatedtest.cpp  serializeparsertest.cpp
test/resources/: array.def  enum.def  map.def  person.def  test1.def  variable.def
